--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <button id="restartBtn">Restart</button>
     </div>
 
-    <audio id="audio" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"></audio>
+    <audio id="audio" src="perfect.mp3"></audio>
 
     <script>
         // Inisialisasi elemen
