--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <button id="restartBtn">Restart</button>
     </div>
 
-    <audio id="audio" src="perfect.mp3"></audio>
+    <audio id="audio" src="https://www.youtube.com/embed/cNGjD0VG4R8?autoplay=1"></audio>
 
     <script>
         // Inisialisasi elemen
@@ -274,22 +274,47 @@
         const progressBar = document.getElementById('progress-bar');
         const progressContainer = document.getElementById('progress-container');
         
-        // Data lirik dengan timestamp (dalam detik)
+        // Data lirik dengan timestamp (dalam detik) - disesuaikan dengan versi YouTube
         const songData = {
             title: "Perfect",
             artist: "Ed Sheeran",
             lyrics: [
-                { time: 0, text: "I found a love for me" },
-                { time: 3, text: "Darling, just dive right in" },
-                { time: 6, text: "And follow my lead" },
-                { time: 9, text: "Well, I found a girl, beautiful and sweet" },
-                { time: 13, text: "Oh, I never knew you were the someone waiting for me" },
-                { time: 19, text: "'Cause we were just kids when we fell in love" },
-                { time: 23, text: "Not knowing what it was" },
-                { time: 26, text: "I will not give you up this time" },
-                { time: 30, text: "But darling, just kiss me slow" },
-                { time: 33, text: "Your heart is all I own" },
-                { time: 36, text: "And in your eyes, you're holding mine" }
+                { time: 12, text: "I found a love for me" },
+                { time: 16, text: "Darling, just dive right in" },
+                { time: 20, text: "And follow my lead" },
+                { time: 24, text: "Well, I found a girl, beautiful and sweet" },
+                { time: 29, text: "Oh, I never knew you were the someone waiting for me" },
+                { time: 37, text: "'Cause we were just kids when we fell in love" },
+                { time: 42, text: "Not knowing what it was" },
+                { time: 46, text: "I will not give you up this time" },
+                { time: 51, text: "But darling, just kiss me slow" },
+                { time: 55, text: "Your heart is all I own" },
+                { time: 59, text: "And in your eyes, you're holding mine" },
+                { time: 64, text: "Baby, I'm dancing in the dark" },
+                { time: 68, text: "With you between my arms" },
+                { time: 72, text: "Barefoot on the grass" },
+                { time: 76, text: "Listening to our favorite song" },
+                { time: 81, text: "When you said you looked a mess" },
+                { time: 85, text: "I whispered underneath my breath" },
+                { time: 89, text: "But you heard it" },
+                { time: 93, text: "Darling, you look perfect tonight" },
+                { time: 104, text: "Well, I found a woman, stronger than anyone I know" },
+                { time: 109, text: "She shares my dreams, I hope that someday I'll share her home" },
+                { time: 117, text: "I found a lover, to carry more than just my secrets" },
+                { time: 122, text: "To carry love, to carry children of our own" },
+                { time: 130, text: "We are still kids, but we're so in love" },
+                { time: 134, text: "Fighting against all odds" },
+                { time: 138, text: "I know we'll be alright this time" },
+                { time: 143, text: "Darling, just hold my hand" },
+                { time: 147, text: "Be my girl, I'll be your man" },
+                { time: 151, text: "I see my future in your eyes" },
+                { time: 160, text: "Baby, I'm dancing in the dark" },
+                { time: 164, text: "With you between my arms" },
+                { time: 168, text: "Barefoot on the grass" },
+                { time: 172, text: "Listening to our favorite song" },
+                { time: 177, text: "When I saw you in that dress, looking so beautiful" },
+                { time: 181, text: "I don't deserve this" },
+                { time: 185, text: "Darling, you look perfect tonight" }
             ]
         };
         
