--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         </footer>
     </div>
 
-    <audio id="audioPlayer" preload="metadata">
+    <audio id="audio" src="biasa samudra.mp3">>
         <!-- Audio akan dibuat secara dinamis melalui JavaScript -->
     </audio>
 
