--- a/index.html
+++ b/index.html
@@ -333,24 +333,24 @@
             title: "Perfect",
             artist: "Ed Sheeran",
             lyrics: [
-                { time: 0, text: "I found a love for me" },
-                { time: 3, text: "Darling, just dive right in and follow my lead" },
-                { time: 7, text: "Well, I found a girl, beautiful and sweet" },
-                { time: 11, text: "I never knew you were the someone waiting for me" },
-                { time: 16, text: "'Cause we were just kids when we fell in love" },
-                { time: 20, text: "Not knowing what it was" },
-                { time: 23, text: "I will not give you up this time" },
-                { time: 27, text: "But darling, just kiss me slow" },
-                { time: 31, text: "Your heart is all I own" },
-                { time: 35, text: "And in your eyes, you're holding mine" },
-                { time: 39, text: "Baby, I'm dancing in the dark" },
-                { time: 43, text: "With you between my arms" },
-                { time: 47, text: "Barefoot on the grass" },
-                { time: 50, text: "Listening to our favorite song" },
-                { time: 54, text: "When you said you looked a mess" },
-                { time: 58, text: "I whispered underneath my breath" },
-                { time: 62, text: "But you heard it" },
-                { time: 64, text: "Darling, you look perfect tonight" }
+                { time: -0.3, text: "I found a love for me" }, // sebelumnya 0
+                { time: 2.7, text: "Darling, just dive right in and follow my lead" }, // sebelumnya 3
+                { time: 6.7, text: "Well, I found a girl, beautiful and sweet" }, // sebelumnya 7
+                { time: 10.7, text: "I never knew you were the someone waiting for me" }, // sebelumnya 11
+                { time: 15.7, text: "'Cause we were just kids when we fell in love" }, // sebelumnya 16
+                { time: 19.7, text: "Not knowing what it was" }, // sebelumnya 20
+                { time: 22.7, text: "I will not give you up this time" }, // sebelumnya 23
+                { time: 26.7, text: "But darling, just kiss me slow" }, // sebelumnya 27
+                { time: 30.7, text: "Your heart is all I own" }, // sebelumnya 31
+                { time: 34.7, text: "And in your eyes, you're holding mine" }, // sebelumnya 35
+                { time: 38.7, text: "Baby, I'm dancing in the dark" }, // sebelumnya 39
+                { time: 42.7, text: "With you between my arms" }, // sebelumnya 43
+                { time: 46.7, text: "Barefoot on the grass" }, // sebelumnya 47
+                { time: 49.7, text: "Listening to our favorite song" }, // sebelumnya 50
+                { time: 53.7, text: "When you said you looked a mess" }, // sebelumnya 54
+                { time: 57.7, text: "I whispered underneath my breath" }, // sebelumnya 58
+                { time: 61.7, text: "But you heard it" }, // sebelumnya 62
+                { time: 63.7, text: "Darling, you look perfect tonight" } // sebelumnya 64
             ]
         };
         
