--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
         <button id="restartBtn">Restart</button>
     </div>
 
-    <audio id="audio" src="perfect.mp3"></audio>
+    <audio id="audio" src="perfect ed.mp3"></audio>
 
     <script>
         // Inisialisasi elemen
@@ -328,31 +328,57 @@
             'https://www.pngmart.com/files/15/Cute-Kitten-PNG-Transparent-Image.png'
         ];
         
-        // Data lirik dengan timestamp (dalam detik) - sudah disesuaikan dengan versi YouTube
-        const songData = {
-            title: "Perfect",
-            artist: "Ed Sheeran",
-            lyrics: [
-                { time: 1.5, text: "I found a love for me" }, // sebelumnya 0
-                { time: 3.5, text: "Darling, just dive right in and follow my lead" }, // sebelumnya 3
-                { time: 7.5, text: "Well, I found a girl, beautiful and sweet" }, // sebelumnya 7
-                { time: 11.5, text: "I never knew you were the someone waiting for me" }, // sebelumnya 11
-                { time: 16.5, text: "'Cause we were just kids when we fell in love" }, // sebelumnya 16
-                { time: 20.5, text: "Not knowing what it was" }, // sebelumnya 20
-                { time: 23.5, text: "I will not give you up this time" }, // sebelumnya 23
-                { time: 27.5, text: "But darling, just kiss me slow" }, // sebelumnya 27
-                { time: 31.5, text: "Your heart is all I own" }, // sebelumnya 31
-                { time: 35.5, text: "And in your eyes, you're holding mine" }, // sebelumnya 35
-                { time: 39.5, text: "Baby, I'm dancing in the dark" }, // sebelumnya 39
-                { time: 43.5, text: "With you between my arms" }, // sebelumnya 43
-                { time: 47.5, text: "Barefoot on the grass" }, // sebelumnya 47
-                { time: 50.5, text: "Listening to our favorite song" }, // sebelumnya 50
-                { time: 54.5, text: "When you said you looked a mess" }, // sebelumnya 54
-                { time: 58.5, text: "I whispered underneath my breath" }, // sebelumnya 58
-                { time: 62.5, text: "But you heard it" }, // sebelumnya 62
-                { time: 64.5, text: "Darling, you look perfect tonight" } // sebelumnya 64
-            ]
-        };
+        // Data lirik dengan timestamp (dalam detik) - disesuaikan dengan versi YouTube
+    const songData = {
+        title: "Perfect",
+        artist: "Ed Sheeran",
+        lyrics: [
+            { time: 18, text: "I found a love for me" },
+            { time: 22, text: "Darling, just dive right in and follow my lead" },
+            { time: 26, text: "Well, I found a girl, beautiful and sweet" },
+            { time: 30, text: "I never knew you were the someone waiting for me" },
+            { time: 35, text: "'Cause we were just kids when we fell in love" },
+            { time: 39, text: "Not knowing what it was" },
+            { time: 42, text: "I will not give you up this time" },
+            { time: 46, text: "But darling, just kiss me slow" },
+            { time: 50, text: "Your heart is all I own" },
+            { time: 54, text: "And in your eyes, you're holding mine" },
+            { time: 58, text: "Baby, I'm dancing in the dark" },
+            { time: 62, text: "With you between my arms" },
+            { time: 66, text: "Barefoot on the grass" },
+            { time: 69, text: "Listening to our favorite song" },
+            { time: 73, text: "When you said you looked a mess" },
+            { time: 77, text: "I whispered underneath my breath" },
+            { time: 81, text: "But you heard it" },
+            { time: 83, text: "Darling, you look perfect tonight" },
+            { time: 87, text: "Well, I found a woman, stronger than anyone I know" },
+            { time: 91, text: "She shares my dreams, I hope that someday I'll share her home" },
+            { time: 96, text: "I found a love, to carry more than just my secrets" },
+            { time: 100, text: "To carry love, to carry children of our own" },
+            { time: 104, text: "We are still kids, but we're so in love" },
+            { time: 108, text: "Fighting against all odds" },
+            { time: 111, text: "I know we'll be alright this time" },
+            { time: 115, text: "Darling, just hold my hand" },
+            { time: 119, text: "Be my girl, I'll be your man" },
+            { time: 123, text: "I see my future in your eyes" },
+            { time: 127, text: "Baby, I'm dancing in the dark" },
+            { time: 131, text: "With you between my arms" },
+            { time: 135, text: "Barefoot on the grass" },
+            { time: 138, text: "Listening to our favorite song" },
+            { time: 142, text: "When I saw you in that dress, looking so beautiful" },
+            { time: 146, text: "I don't deserve this" },
+            { time: 150, text: "Darling, you look perfect tonight" },
+            { time: 158, text: "Baby, I'm dancing in the dark" },
+            { time: 162, text: "With you between my arms" },
+            { time: 166, text: "Barefoot on the grass" },
+            { time: 169, text: "Listening to our favorite song" },
+            { time: 173, text: "I have faith in what I see" },
+            { time: 177, text: "Now I know I have met an angel in person" },
+            { time: 181, text: "And she looks perfect" },
+            { time: 184, text: "I don't deserve this" },
+            { time: 188, text: "You look perfect tonight" }
+        ]
+    };
         
         // Buat bintang-bintang yang berkedip
         function createStars() {
