--- a/index.html
+++ b/index.html
@@ -328,48 +328,48 @@
             'https://www.pngmart.com/files/15/Cute-Kitten-PNG-Transparent-Image.png'
         ];
         
-        // Data lirik dengan timestamp (dalam detik)
+        // Data lirik dengan timestamp yang sudah disesuaikan (dikurangi 0.3 detik)
         const songData = {
             title: "Perfect",
             artist: "Ed Sheeran",
             lyrics: [
-                { time: 0, text: "I found a love for me" },
-                { time: 3, text: "Darling, just dive right in" },
-                { time: 6, text: "And follow my lead" },
-                { time: 9, text: "Well, I found a girl, beautiful and sweet" },
-                { time: 13, text: "Oh, I never knew you were the someone waiting for me" },
-                { time: 19, text: "'Cause we were just kids when we fell in love" },
-                { time: 23, text: "Not knowing what it was" },
-                { time: 26, text: "I will not give you up this time" },
-                { time: 30, text: "But darling, just kiss me slow" },
-                { time: 33, text: "Your heart is all I own" },
-                { time: 36, text: "And in your eyes, you're holding mine" },
-                { time: 40, text: "Baby, I'm dancing in the dark" },
-                { time: 43, text: "With you between my arms" },
-                { time: 46, text: "Barefoot on the grass" },
-                { time: 49, text: "Listening to our favorite song" },
-                { time: 53, text: "When you said you looked a mess" },
-                { time: 56, text: "I whispered underneath my breath" },
-                { time: 59, text: "But you heard it" },
-                { time: 61, text: "Darling, you look perfect tonight" },
-                { time: 67, text: "Well, I found a woman, stronger than anyone I know" },
-                { time: 72, text: "She shares my dreams, I hope that someday I'll share her home" },
-                { time: 77, text: "I found a lover, to carry more than just my secrets" },
-                { time: 82, text: "To carry love, to carry children of our own" },
-                { time: 87, text: "We are still kids, but we're so in love" },
-                { time: 91, text: "Fighting against all odds" },
-                { time: 94, text: "I know we'll be alright this time" },
-                { time: 98, text: "Darling, just hold my hand" },
-                { time: 101, text: "Be my girl, I'll be your man" },
-                { time: 104, text: "I see my future in your eyes" },
-                { time: 108, text: "Baby, I'm dancing in the dark" },
-                { time: 111, text: "With you between my arms" },
-                { time: 114, text: "Barefoot on the grass" },
-                { time: 117, text: "Listening to our favorite song" },
-                { time: 121, text: "When I saw you in that dress, looking so beautiful" },
-                { time: 126, text: "I don't deserve this" },
-                { time: 128, text: "Darling, you look perfect tonight" },
-                { time: 136, text: "No, you look perfect tonight" }
+                { time: -0.3, text: "I found a love for me" },  // disesuaikan dari 0
+                { time: 2.7, text: "Darling, just dive right in" },  // disesuaikan dari 3
+                { time: 5.7, text: "And follow my lead" },  // disesuaikan dari 6
+                { time: 8.7, text: "Well, I found a girl, beautiful and sweet" },  // disesuaikan dari 9
+                { time: 12.7, text: "Oh, I never knew you were the someone waiting for me" },  // disesuaikan dari 13
+                { time: 18.7, text: "'Cause we were just kids when we fell in love" },  // disesuaikan dari 19
+                { time: 22.7, text: "Not knowing what it was" },  // disesuaikan dari 23
+                { time: 25.7, text: "I will not give you up this time" },  // disesuaikan dari 26
+                { time: 29.7, text: "But darling, just kiss me slow" },  // disesuaikan dari 30
+                { time: 32.7, text: "Your heart is all I own" },  // disesuaikan dari 33
+                { time: 35.7, text: "And in your eyes, you're holding mine" },  // disesuaikan dari 36
+                { time: 39.7, text: "Baby, I'm dancing in the dark" },  // disesuaikan dari 40
+                { time: 42.7, text: "With you between my arms" },  // disesuaikan dari 43
+                { time: 45.7, text: "Barefoot on the grass" },  // disesuaikan dari 46
+                { time: 48.7, text: "Listening to our favorite song" },  // disesuaikan dari 49
+                { time: 52.7, text: "When you said you looked a mess" },  // disesuaikan dari 53
+                { time: 55.7, text: "I whispered underneath my breath" },  // disesuaikan dari 56
+                { time: 58.7, text: "But you heard it" },  // disesuaikan dari 59
+                { time: 60.7, text: "Darling, you look perfect tonight" },  // disesuaikan dari 61
+                { time: 66.7, text: "Well, I found a woman, stronger than anyone I know" },  // disesuaikan dari 67
+                { time: 71.7, text: "She shares my dreams, I hope that someday I'll share her home" },  // disesuaikan dari 72
+                { time: 76.7, text: "I found a lover, to carry more than just my secrets" },  // disesuaikan dari 77
+                { time: 81.7, text: "To carry love, to carry children of our own" },  // disesuaikan dari 82
+                { time: 86.7, text: "We are still kids, but we're so in love" },  // disesuaikan dari 87
+                { time: 90.7, text: "Fighting against all odds" },  // disesuaikan dari 91
+                { time: 93.7, text: "I know we'll be alright this time" },  // disesuaikan dari 94
+                { time: 97.7, text: "Darling, just hold my hand" },  // disesuaikan dari 98
+                { time: 100.7, text: "Be my girl, I'll be your man" },  // disesuaikan dari 101
+                { time: 103.7, text: "I see my future in your eyes" },  // disesuaikan dari 104
+                { time: 107.7, text: "Baby, I'm dancing in the dark" },  // disesuaikan dari 108
+                { time: 110.7, text: "With you between my arms" },  // disesuaikan dari 111
+                { time: 113.7, text: "Barefoot on the grass" },  // disesuaikan dari 114
+                { time: 116.7, text: "Listening to our favorite song" },  // disesuaikan dari 117
+                { time: 120.7, text: "When I saw you in that dress, looking so beautiful" },  // disesuaikan dari 121
+                { time: 125.7, text: "I don't deserve this" },  // disesuaikan dari 126
+                { time: 127.7, text: "Darling, you look perfect tonight" },  // disesuaikan dari 128
+                { time: 135.7, text: "No, you look perfect tonight" }  // disesuaikan dari 136
             ]
         };
         
