--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ I don't deserve this, darling, you look perfect tonight</div>
     </div>
     
     <footer>
-        Lyrics © Ed Sheeran · Designed with ♥
+        Lyrics © Ed Sheeran · Belajar Hapiss
     </footer>
     
     <script>
