--- a/index.html
+++ b/index.html
@@ -364,8 +364,8 @@
 
         // Daftar gambar yang akan ditampilkan sesuai dengan lirik
         const imageUrls = [
-            "https://images.unsplash.com/photo-1571330735066-03aaa9429d89?w=500&h=500&fit=crop",
-            "https://images.unsplash.com/photo-1598387993281-8e0c6eefa508?w=500&h=500&fit=crop",
+            "dino.png=crop",
+            "pantai lmpg.png=crop",
             "https://images.unsplash.com/photo-1511735111819-9a3f7709049c?w=500&h=500&fit=crop",
             "https://images.unsplash.com/photo-1493225457124-a3eb161ffa5f?w=500&h=500&fit=crop",
             "https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?w=500&h=500&fit=crop"
