--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         body {
             /* Background akan digantikan dengan gambar */
             background: linear-gradient(rgba(26, 26, 46, 0.85), rgba(22, 33, 62, 0.9)), 
-                        url('placeholder-background.jpg') no-repeat center center fixed;
+                        url('pantai lmpg.png') no-repeat center center fixed;
             background-size: cover;
             color: #fff;
             min-height: 100vh;
