--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
         
         <div class="album-art">
             <!-- Ganti dengan path gambar album Anda -->
-            <img src="dino.png" alt="Album Cover">
+            <img src="about you.png" alt="Album Cover">
         </div>
         
         <div class="player-controls">
